I modified the HTML file by adding some text

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Welcome to my weather application</h1>
+    <footer>
+      coded with love by
+      <a href="https://github.com/SarahTouaiti">Sara Touaiti</a>
+    </footer>
+  </body>
 </html>
