I updated the HTML file to include hyperlinks to my GitHub and Netlify profiles.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <h1>Welcome to my weather application</h1>
     <footer>
       coded with love by
-      <a href="https://github.com/SarahTouaiti">Sara Touaiti</a>
+      <a href="https://github.com/SarahTouaiti" target="_blank">Sara Touaiti</a>
+      , code hosted on
+      <a href="https://github.com/SarahTouaiti/meteology" target="_blank"
+        >GitHub</a
+      >
+      and website hosted on <a href="#" target="_blank">Netlify</a>
     </footer>
   </body>
 </html>
