I updated the HTML file by changing the footer

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <body>
     <h1>Welcome to my weather application</h1>
     <footer>
-      coded with love by
-      <a href="https://github.com/SarahTouaiti" target="_blank">Sara Touaiti</a>
-      , code hosted on
+      This website was developed by
+      <a href="https://github.com/SarahTouaiti" target="_blank">Sara Touaiti</a
+      >. The source code is hosted on
       <a href="https://github.com/SarahTouaiti/meteology" target="_blank"
         >GitHub</a
-      >
-      and website hosted on <a href="#" target="_blank">Netlify</a>
+      >, and the live site is deployed via
+      <a href="https://your-netlify-site-url.netlify.app" target="_blank"
+        >Netlify</a
+      >.
     </footer>
   </body>
 </html>
