--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>My Weather App</title>
   </head>
   <body>
-    <h1>Welcome to my weather application</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" required />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>🌥️ 12°C</div>
+    </main>
     <footer>
       This website was developed by
       <a href="https://github.com/SarahTouaiti" target="_blank">Sara Touaiti</a
