--- a/index.html
+++ b/index.html
@@ -3,37 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/styles.css" />
     <title>My Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city" required />
-        <input type="submit" value="search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 14:49, scattered clouds
-          <br />
-          Humidity: 66%, Wind: 3.13km/h
-        </p>
-      </div>
-      <div>🌥️ 12°C</div>
-    </main>
-    <footer>
-      This website was developed by
-      <a href="https://github.com/SarahTouaiti" target="_blank">Sara Touaiti</a
-      >. The source code is hosted on
-      <a href="https://github.com/SarahTouaiti/meteology" target="_blank"
-        >GitHub</a
-      >, and the live site is deployed via
-      <a href="https://your-netlify-site-url.netlify.app" target="_blank"
-        >Netlify</a
-      >.
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city" required />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Tuesday 14:49, scattered clouds
+            <br />
+            Humidity: 66%, Wind: 3.13km/h
+          </p>
+        </div>
+        <div>🌥️ 12°C</div>
+      </main>
+      <footer>
+        This website was developed by
+        <a href="https://github.com/SarahTouaiti" target="_blank"
+          >Sara Touaiti</a
+        >. The source code is hosted on
+        <a href="https://github.com/SarahTouaiti/meteology" target="_blank"
+          >GitHub</a
+        >, and the live site is deployed via
+        <a href="https://your-netlify-site-url.netlify.app" target="_blank"
+          >Netlify</a
+        >.
+      </footer>
+    </div>
   </body>
 </html>
