--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
             </p>
           </div>
           <div class="weather-app-temperature">
-            <div class="weather-app-emoji" id="weather-icon">🌥️</div>
+            <div id="icon">
+              <img
+                src="https://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-night.png"
+                class="weather-app-emoji"
+              />
+            </div>
             <div class="temperature-value" id="temperature-value">12</div>
             <div class="temperature-unit">°C</div>
           </div>
